--- a/templates/add_association.html
+++ b/templates/add_association.html
@@ -4,6 +4,8 @@
 
 {% load widget_tweaks %}
 
+{% block breadcrumb %}<li class="active">Alta Associació </li>{% endblock %}
+
 {% block content %}
 
 		<h4 class="page-header">
