--- a/templates/association.html
+++ b/templates/association.html
@@ -4,6 +4,8 @@
 
 {% block sectionclass %}invoice{% endblock %}
 
+{% block breadcrumb %}<li class="active">{{ association.name }}</li>{% endblock %}
+
 {% block content %}
 
 		     <!-- title row -->
