--- a/templates/base.html
+++ b/templates/base.html
@@ -349,8 +349,8 @@
             Associacions 
           </h1>
           <ol class="breadcrumb">
-            <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-            <li class="active">Dashboard</li>
+            <li><a href="{% url 'index' %}"><i class="fa fa-dashboard"></i> Inici</a></li>
+            {% block breadcrumb %}{% endblock %}
           </ol>
         </section>
 
