--- a/templates/add_uf.html
+++ b/templates/add_uf.html
@@ -2,6 +2,11 @@
 
 {% load staticfiles %}
 
+{% block breadcrumb %}
+	<li><a href="{% url 'association' association.id %}">{{ association.name }}</a></li>
+	<li class="active">Alta Unitat Familiar</li>
+{% endblock %}
+
 {% block content %}
 
 		<h4 class="page-header">
