--- a/templates/association.html
+++ b/templates/association.html
@@ -13,7 +13,7 @@
             <div class="col-xs-12">
             	<div class="media">
   					<div class="media-left">
-    					<a href="{{ association.url }}"><img class="media-object" src="{% if association.logotype %} {{ association.logotype.url }}{% endif %}" alt="logo" style="width: 64px; height: 64px;"></a>
+    					<a href="{{ association.url }}"><img class="media-object" src="{% if association.logotype %} {{ association.logotype.url }} {% else %} {% static "images/nologo.png" %} {% endif %}" alt="logo" style="width: 64px; height: 64px;"></a>
   					</div>
   				<div class="media-body">
     				<h2 class="page-header">
