--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,8 @@
 		                  </p>
 		                </div>
 		                <div class="icon">
-		                  <i class="ion ion-pie-graph"></i>
+		                	<img class="media-object ion" src="{% if association.logotype %} {{ association.logotype.url }} {% else %} {% static "images/nologo.png" %} {% endif %}" alt="logo" style="width: 64px; height: 64px;">	
+		                  <!--<i class="ion ion-pie-graph"></i>-->
 		                </div>
 		                <a href="{% url 'association' association.id %}" class="small-box-footer">
 		                  Més informació <i class="fa fa-arrow-circle-right"></i>
