--- a/templates/add_member.html
+++ b/templates/add_member.html
@@ -7,7 +7,13 @@
 {% block breadcrumb %}
 	<li><a href="{% url 'association' uf.association.id %}">{{ uf.association.name }}</a></li>
 	<li><a href="{% url 'uf' uf.association.id uf.id %}">UF{{ uf.id }}</a></li>
-	<li class="active">Alta Soci</li>
+	{% if member_id %}
+		<li><a href="{% url 'member' uf.association.id uf.id member_id %}">{{ form.name.value }} {{ form.firstsurname.value }} {{ form.secondsurname.value }}</a></li>
+		<li class="active">Editar</li>
+		
+	{% else %}
+		<li class="active">Alta Soci</li>
+	{% endif %}
 {% endblock %}
 
 {% block content %}
