--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,8 @@
     <link href="{% static "plugins/jvectormap/jquery-jvectormap-1.2.2.css" %}" rel="stylesheet" type="text/css" />
     <!-- Daterange picker -->
     <link href="{% static "plugins/daterangepicker/daterangepicker-bs3.css" %}" rel="stylesheet" type="text/css" />
+    <!-- DATA TABLES -->
+    <link href="{% static "plugins/datatables/dataTables.bootstrap.css" %}" rel="stylesheet" type="text/css" />
     <!-- Theme style -->
     <link href="{% static "dist/css/AdminLTE.min.css" %}" rel="stylesheet" type="text/css" />
     <!-- AdminLTE Skins. Choose a skin from the css/skins 
@@ -390,16 +392,15 @@
     <script src="{% static "plugins/chartjs/Chart.min.js" %}" type="text/javascript"></script>
 	
     <script src="{% static "dist/js/pages/dashboard2.js" %}" type="text/javascript"></script>
+    
+    <!-- DATA TABES SCRIPT -->
+   	<script src="{% static "plugins/datatables/jquery.dataTables.js" %}" type="text/javascript"></script>
+    <script src="{% static "plugins/datatables/dataTables.bootstrap.js" %}" type="text/javascript"></script>
 	
 	 <!-- InputMask -->
 	 <script src="{% static "plugins/input-mask/jquery.inputmask.js" %}" type="text/javascript"></script>
 	 <script src="{% static "plugins/input-mask/jquery.inputmask.date.extensions.js" %}" type="text/javascript"></script>
-	 <script src="{% static "plugins/input-mask/jquery.inputmask.extensions.js" %}" type="text/javascript"></script>
-     <script type="text/javascript">
-        $(function () {
-          $("#data-mask").inputmask();
-       	});        
-      </script>   	
+	 <script src="{% static "plugins/input-mask/jquery.inputmask.extensions.js" %}" type="text/javascript"></script> 	
 	
   </body>
 </html>
