--- a/templates/member.html
+++ b/templates/member.html
@@ -17,13 +17,13 @@
             <div class="col-xs-12">
             	<div class="media">
   					<div class="media-left">
-    					<a href="{{ association.url }}"><img class="media-object" src="{% if association.logotype %} {{ association.logotype.url }}{% endif %}" alt="logo" style="width: 128px; height: 128px;"></a>
+    					<a href="{{ association.url }}"><img class="media-object" src="{% if association.logotype %} {{ association.logotype.url }} {% else %} {% static "images/noimage.png" %} {% endif %}" alt="logo" style="width: 128px; height: 128px;"></a>
   					</div>
   				<div class="media-body">
     				<h2 class="page-header">
                 	{{ member.name }} {{ member.firstsurname }} {{ member.secondsurname }}
                 	<a href="{% url 'edit_member' member.uf.association.id member.uf.id member.id %}" class="btn btn-default pull-right"><i class="fa fa-plus"></i> Editar</a>
-                	<small class="pull-right"> Data Creació: 2/10/2007</small>
+                	<!--<small class="pull-right"> Data Creació: 2/10/2007</small>-->
               		</h2>
 				  </div>
 				</div>	
@@ -32,7 +32,8 @@
           </div>
           <!-- info row -->
           <div class="row invoice-info">
-            <div class="col-sm-8 invoice-col">
+            <div class="col-sm-12">
+            <h4>
               <dl class="dl-horizontal">
                     <dt>DNI</dt>
                     <dd>{{ member.dni }}</dd>
@@ -42,51 +43,23 @@
                     <dd>{{ member.email }}</dd>
                     <dt>Adreça</dt>
                     <dd>{{ member.adress }}</dd>
-                    <dt>CP, Ciutat (Provincia)</dt>
                     <dd>{{ member.postalcode }}, {{ member.city }} ({{ member.province }})</dd>
                     <dt>País</dt>
                     <dd>{{ member.country }}</dd>
                     <dt>Telèfon</dt>
                     <dd>{{ member.telephone }}</dd>
               </dl>
+              </h4>
              </div><!-- /.col -->
             <div class="col-sm-4 invoice-col">
-              <div class="info-box">
+              <!--<div class="info-box">
                 <span class="info-box-icon bg-yellow"><i class="ion ion-ios-people-outline"></i></span>
                 <div class="info-box-content">
                   <span class="info-box-text">Socis</span>
                   <span class="info-box-number">250</span>
                 </div><!-- /.info-box-content -->
-              </div><!-- /.info-box -->
-            </div><!-- /.col -->
-          </div><!-- /.row -->
-
-          <!-- Table row -->
-          <div class="row">
-            <div class="col-xs-12 table-responsive">
-              <table class="table table-hover">
-                <thead>
-                  <tr>
-                    <th>#</th>
-                    <th>Compte Corrent</th>
-                    <th>Nom</th>
-                    <th>Tipus</th>
-                    <th>Núm Membres</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  {% for uf in Ufs %}
-                	 <tr data-link="{% url 'uf' association.id uf.id %}">
-	                    <td>{{ uf.id }}</td>
-	                    <td>{{ uf.currentaccount }}</td>
-	                    <td>Soci {{ uf.id }}</td>
-	                    <td><span class="label label-success">Normal</span></td> <!-- {{ uf.typequote }} -->	                    
-	                    <td>3</td>	                 
-                  	 </tr>
-                  {% endfor %}              
-                </tbody>
-              </table>
-            </div><!-- /.col -->
+              <!--</div>--><!-- /.info-box -->
+            <!--</div>--><!-- /.col -->
           </div><!-- /.row -->
 
           <!-- this row will not appear when printing -->
