Titles pages and subpages

--- a/templates/association.html
+++ b/templates/association.html
@@ -4,6 +4,10 @@
 
 {% block sectionclass %}invoice{% endblock %}
 
+{% block title %}Fitxa de l'Associació{% endblock %} 
+
+{% block titlepage %}Fitxa de l'Associació{% endblock %} 
+
 {% block breadcrumb %}<li class="active">{{ association.name }}</li>{% endblock %}
 
 {% block content %}
@@ -54,7 +58,7 @@
                   <span class="info-box-number">{{ totalmembers }}</span>
                 </div><!-- /.info-box-content -->
               </div><!-- /.info-box -->
-              <a href="{% url 'add_uf' association.id %}" class="btn btn-default pull-right"><i class="fa fa-plus"></i> Afegir UF</a>
+              <a href="{% url 'add_uf' association.id %}" class="btn btn-default pull-right"><i class="fa fa-plus"></i> Afegir Unitat Familiar</a>
             </div><!-- /.col -->
           </div><!-- /.row -->
 		  
