--- a/templates/base.html
+++ b/templates/base.html
@@ -348,7 +348,7 @@
         <!-- Content Header (Page header) -->
         <section class="content-header">
           <h1>
-            Associacions 
+            {% block titlepage %}Null{% endblock %} 
           </h1>
           <ol class="breadcrumb">
             <li><a href="{% url 'index' %}"><i class="fa fa-dashboard"></i> Inici</a></li>
