--- a/templates/member.html
+++ b/templates/member.html
@@ -2,6 +2,10 @@
 
 {% load staticfiles %}
 
+{% block title %}Fitxa del Soci{% endblock %} 
+
+{% block titlepage %}Fitxa del Soci{% endblock %} 
+
 {% block sectionclass %}invoice{% endblock %}
 
 {% block breadcrumb %}
@@ -26,13 +30,14 @@
                 	<!--<small class="pull-right"> Data Creació: 2/10/2007</small>-->
               		</h2>
 				  </div>
-				</div>	
-              
+				</div>	              
             </div><!-- /.col -->
           </div>
           <!-- info row -->
           <div class="row invoice-info">
-            <div class="col-sm-12">
+          	<div class="col-sm-2">
+          	</div>
+            <div class="col-sm-6">
             <h4>
               <dl class="dl-horizontal">
                     <dt>DNI</dt>
