--- a/templates/association.html
+++ b/templates/association.html
@@ -61,6 +61,7 @@
               <a href="{% url 'edit_association' association.id %}" class="btn btn-default pull-right"><i class="fa fa-plus"></i> Editar Associació</a>
               <a href="{% url 'add_uf' association.id %}" class="btn btn-default pull-right"><i class="fa fa-plus"></i> Afegir Unitat Familiar</a>
               <a href="{% url 'members_export' association.id %}" class="btn btn-default pull-right"><i class="fa fa-plus"></i> Exportar Llistat Socis</a>
+              <a href="{% url 'members_import' association.id %}" class="btn btn-default pull-right"><i class="fa fa-plus"></i> Importar Socis</a>
             </div><!-- /.col -->
           </div><!-- /.row -->
 		  
